Crash when moving data from dedicated GPU memory to shared during cycles Optix viewport rendering #90308

Closed
opened 2021-07-29 18:34:56 +02:00 by James Horsley · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c &
version: 3.0.0 Alpha, branch: master, commit date: 2021-07-29 11:11, hash: 3f84f0123e
Worked: -

Short description of error
If you modify the scene and exceed the dedicated GPU memory of your GPU while rendering with OptiX in the viewport it will crash

Exact steps for others to reproduce the error
Load a large amount of textures and geometry to fill VRAM and then while viewport rendering modify the scene to increase usage further so that it starts moving textures and other data into shared GPU memory.

Open crash.blend
start viewport rendering
one by one step up the cubes subdivision levels
at 9-10 it crashes
crash.blend
crash.crash.txt
blender_debug_output.txt
blender_system_info.txt

Had a look in VS and seems like one of the device_memory objects is bad
image.png
image.png
I've seen the name be "optix blas" too

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` & version: 3.0.0 Alpha, branch: master, commit date: 2021-07-29 11:11, hash: `3f84f0123e` Worked: - **Short description of error** If you modify the scene and exceed the dedicated GPU memory of your GPU while rendering with OptiX in the viewport it will crash **Exact steps for others to reproduce the error** Load a large amount of textures and geometry to fill VRAM and then while viewport rendering modify the scene to increase usage further so that it starts moving textures and other data into shared GPU memory. Open crash.blend start viewport rendering one by one step up the cubes subdivision levels at 9-10 it crashes [crash.blend](https://archive.blender.org/developer/F10245379/crash.blend) [crash.crash.txt](https://archive.blender.org/developer/F10245388/crash.crash.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F10245386/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F10245387/blender_system_info.txt) Had a look in VS and seems like one of the device_memory objects is bad ![image.png](https://archive.blender.org/developer/F10245392/image.png) ![image.png](https://archive.blender.org/developer/F10245394/image.png) I've seen the name be "optix blas" too
Author

Added subscriber: @mmdanggg2

Added subscriber: @mmdanggg2

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

In general out of memory crashes are not considered a bug currently, so I will have to close this report. If you or anybody else would like to contribute fix, feel free to create patch though.
Thanks for reporting anyway.

In general out of memory crashes are not considered a bug currently, so I will have to close this report. If you or anybody else would like to contribute fix, feel free to create patch though. Thanks for reporting anyway.
Author

I wouldn't classify this as out of memory. I should clarify, there is still plenty of Shared GPU memory available and it is crashing moving data from Dedicated to Shared. The CUDA version seems to be handling this fine but OptiX crashes.
On CUDA:
image.png
On OptiX:
image.png

I wouldn't classify this as out of memory. I should clarify, there is still plenty of Shared GPU memory available and it is crashing moving data from Dedicated to Shared. The CUDA version seems to be handling this fine but OptiX crashes. On CUDA: ![image.png](https://archive.blender.org/developer/F10270482/image.png) On OptiX: ![image.png](https://archive.blender.org/developer/F10270496/image.png)
James Horsley changed title from Crash when exceeding dedicated VRAM during cycles Optix viewport rendering to Crash when moving data from dedicated GPU memory to shared during cycles Optix viewport rendering 2021-08-06 11:16:32 +02:00

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Thanks for clarification, Unfortunately I don't have OPTIX GPU to investigate this report, but I think this deserves another look.

Thanks for clarification, Unfortunately I don't have OPTIX GPU to investigate this report, but I think this deserves another look.

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the issue.
Depending on the amount of VRAM you might need to subdivide few cubes before the bug happens.

I can confirm the issue. Depending on the amount of VRAM you might need to subdivide few cubes before the bug happens.

Added subscriber: @brecht

Added subscriber: @brecht

I'll mark this as high priority to at least look at this once for the 3.0 release, because this seems serious.

It may be that we are moving an OptiX memory allocation to the host when we shouldn't.

I'll mark this as high priority to at least look at this once for the 3.0 release, because this seems serious. It may be that we are moving an OptiX memory allocation to the host when we shouldn't.
Sergey Sharybin self-assigned this 2021-11-22 11:24:54 +01:00

This issue was referenced by blender/cycles@24b24da5d7

This issue was referenced by blender/cycles@24b24da5d75a9a09519a06da2955653b483b23ac

This issue was referenced by 336ca6796a

This issue was referenced by 336ca6796a7a6ee26ff6d889643df07a37efa554

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90308
No description provided.